--- a/client/main.css
+++ b/client/main.css
@@ -199,6 +199,20 @@ li.notification {
     /*margin-right:40px;*/
 }
 
+.uniteALink{
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
+    font-size: 70px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: bold;
+    line-height: 53.9px;
+    color:white;
+    position:fixed;
+    /*height:100%;*/
+    /*margin-right:40px;*/
+}
+
+
 .bottom-menu{
     position:fixed;
     bottom:0px;
