--- a/client/main.css
+++ b/client/main.css
@@ -576,6 +576,10 @@ li.notification {
         right:7vw;
         left:inherit !important;
     }
+    .mobile-no-left
+    {
+       left:inherit !important;
+    }
 }
 
 
